fixed flexbox image distortion

--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ body {
 #weapon-thrown {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     margin-top: 40px;
 }
 
